--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
         <img src="images/cybthumb.jpg" alt="Cyberpunk 2077 Thumbnail">
         <h2>Cyberpunk 2077</h2>
         <p>Immerse yourself in the dystopian future of Night City as V, a mercenary seeking immortality. Navigate through a sprawling open-world, make impactful choices, and unravel a gripping narrative in this action-packed RPG.</p>
-        <a href="https://store.steampowered.com/app/1091500/Cyberpunk_2077/">Play Now</a>
+        <a href="https://rawg.io/games/cyberpunk-2077">Play Now</a>
       </div>
       <div class="game-box">
         <img src="images/csgothumb.jpg" alt="CSGO Thumbnail">
         <h2>Counter-Strike: Global Offensive</h2>
         <p>Engage in intense, team-based tactical combat in this iconic first-person shooter. Join the counter-terrorist or terrorist forces, strategize with your team, and compete in bomb defusal or hostage rescue missions. Precision and teamwork are key to victory.</p>
-        <a href="https://store.steampowered.com/app/730/CounterStrike_2/">Play Now</a>
+        <a href="https://rawg.io/games/counter-strike-global-offensive">Play Now</a>
       </div>
       <div class="game-box">
         <img src="images/starthumb.jpg" alt="Starfield Thumbnail">
         <h2>Starfield</h2>
         <p>Embark on an epic spacefaring journey in Starfield, the highly anticipated space exploration game. Explore uncharted galaxies, discover new planets, and engage in immersive storytelling as you forge your path among the stars. Uncover the mysteries of the cosmos in this upcoming adventure.</p>
-        <a href="https://store.steampowered.com/app/1716740/Starfield/">Play Now</a>
+        <a href="https://rawg.io/games/starfield">Play Now</a>
       </div>
     </div>
   </section>
