--- a/action.html
+++ b/action.html
@@ -43,25 +43,25 @@
         <img src="act-images/apexlegthumb.jpg" alt="Apex Legends Thumbnail">
         <h3>Apex Legends</h3>
         <p>Dive into the ultimate battle royale experience. Unleash your skills alongside unique characters, each armed with distinct abilities. Victory awaits – are you ready?</p>
-        <a href="https://store.steampowered.com/app/1172470/Apex_Legends/">Play Now</a>
+        <a href="https://rawg.io/games/apex-legends">Play Now</a>
       </div>
       <div class="game-box dest2">
         <img src="act-images/dest2thumb.jpg" alt="Destiny 2 Thumbnail">
         <h3>Destiny 2</h3>
         <p>Embark on an epic sci-fi journey, an online multiplayer first-person shooter. Immerse yourself in a richly crafted universe, engage in intense battles, and shape your destiny as a legendary guardian.</p>
-        <a href="https://store.steampowered.com/app/1085660/Destiny_2/">Play Now</a>
+        <a href="https://rawg.io/games/destiny-2">Play Now</a>
       </div>
       <div class="game-box left-4dead">
         <img src="act-images/l4dthumb.jpg" alt="Left 4 Dead 2 Thumbnail">
         <h3>Left 4 Dead 2</h3>
         <p>Survive the zombie apocalypse, a heart-pounding cooperative first-person shooter. Team up with friends, face relentless undead hordes, and fight for survival in this thrilling post-apocalyptic world.</p>
-        <a href="https://store.steampowered.com/app/550/Left_4_Dead_2/">Play Now</a>
+        <a href="https://rawg.io/games/left-4-dead-2">Play Now</a>
       </div>
       <div class="game-box doom">
         <img src="act-images/doomthumb.jpg" alt="Doom Eternal">
         <h3>Doom Eternal</h3>
         <p>Rip and tear through hordes of demons in this fast-paced first-person shooter. Unleash powerful weapons and face epic challenges in a relentless fight against Hell's forces.</p>
-        <a href="https://store.steampowered.com/app/782330/DOOM_Eternal/">Play Now</a>
+        <a href="https://rawg.io/games/doom-eternal">Play Now</a>
       </div>
     </div>
     </div>
@@ -72,25 +72,25 @@
         <img src="act-images/assasinthumb.jpg" alt="Assassin's Creed Valhalla">
         <h3>Assassin's Creed Valhalla</h3>
         <p>Join Eivor, a fierce Viking warrior, in the epic adventure of Assassin's Creed Valhalla. Raid, conquer, and build your legacy in a visually stunning open world, filled with political intrigue and intense combat. Experience a captivating blend of history and myth in this immersive gaming journey.</p>
-        <a href="https://store.steampowered.com/app/2208920/Assassins_Creed_Valhalla/">Play Now</a>
+        <a href="https://rawg.io/games/assassins-creed-valhalla">Play Now</a>
       </div>
       <div class="game-box mortal">
         <img src="act-images/mortalthumb.jpg" alt="Mortal Kombat 11">
         <h3>Mortal Kombat 11 </h3>
         <p>Enter the intense world of Mortal Kombat 11, a legendary fighting game known for its brutal combat, iconic fatalities, and diverse roster. With stunning graphics and a gripping storyline, engage in adrenaline-pumping battles that showcase martial arts and supernatural powers.</p>
-        <a href="https://store.steampowered.com/app/976310/Mortal_Kombat11/">Play Now</a>
+        <a href="https://rawg.io/games/mortal-kombat-11">Play Now</a>
       </div>
       <div class="game-box hades">
         <img src="act-images/hadesthumb.jpg" alt="Hades">
         <h3>Hades</h3>
         <p>Escape the underworld in Hades, a captivating roguelike by Supergiant Games. As Zagreus, son of Hades, engage in fast-paced battles through mythological realms with stunning visuals and innovative storytelling.</p>
-        <a href="https://store.steampowered.com/app/1145360/Hades/">Play Now</a>
+        <a href="https://rawg.io/games/hades-2018">Play Now</a>
       </div>
       <div class="game-box devil">
         <img src="act-images/devilthumb.jpg" alt="Devil May Cry 5">
         <h3>Devil May Cry 5</h3>
         <p>Immerse yourself in the stylish chaos of Devil May Cry 5. Join demon hunters Nero and Dante in a relentless battle against a new demonic threat. With stunning visuals and high-energy combat, this game delivers an exhilarating and iconic experience, featuring powerful combos and formidable foes.</p>
-        <a href="https://store.steampowered.com/app/601150/Devil_May_Cry_5/">Play Now</a>
+        <a href="https://rawg.io/games/devil-may-cry-5">Play Now</a>
       </div>
     </div>  
   </section>  
