--- a/advt.html
+++ b/advt.html
@@ -44,25 +44,25 @@
         <img src="advt-images/hoglegthumb.png" alt="Hogwarts Legacy">
         <h3>Hogwarts Legacy</h3>
         <p>Attend Hogwarts, learn spells, and explore a captivating open-world filled with mystical creatures.</p>
-        <a href="https://store.steampowered.com/app/990080/Hogwarts_Legacy/">Play Now</a>
+        <a href="https://rawg.io/games/hogwarts-legacy">Play Now</a>
       </div>
       <div class="game-box liesofp">
         <img src="advt-images/liesofpthumb.jpg" alt="Lies of P">
         <h3>Lies of P</h3>
         <p>Embark on a captivating odyssey, solving puzzles and unraveling the enigmatic "Lies of P" to shape your unique narrative.</p>
-        <a href="https://store.steampowered.com/app/1627720/Lies_of_P/">Play Now</a>
+        <a href="https://rawg.io/games/lies-of-p">Play Now</a>
       </div>
       <div class="game-box lordfall">
         <img src="advt-images/lordfallthumb.jpg" alt="Lords of the Fallen">
         <h3>Lords of the Fallen</h3>
         <p>Experience intense combat and embark on a heroic journey in Lords of the Fallen, an action-packed RPG set in a dark fantasy world.</p>
-        <a href="https://store.steampowered.com/app/1501750/Lords_of_the_Fallen/">Play Now</a>
+        <a href="https://rawg.io/games/lords-of-the-fallen-2">Play Now</a>
       </div>
       <div class="game-box newworld">
         <img src="advt-images/nwthumb.jpg" alt="New World">
         <h3>New World</h3>
         <p>Immerse yourself in the exhilarating world of "New World," where uncharted territories, supernatural forces, and player-driven narratives collide for an electrifying gaming experience.</p>
-        <a href="https://store.steampowered.com/app/1063730/New_World/">Play Now</a>
+        <a href="https://rawg.io/games/new-world-2">Play Now</a>
       </div>
     </div>
   </section>
@@ -74,25 +74,25 @@
         <img src="advt-images/seaofthievesthumb.jpg" alt="Sea of Thieves">
         <h3>Sea of Thieves</h3>
         <p>Sail the high seas in "Sea of Thieves," engaging in epic naval battles, discovering hidden treasures, and living the pirate's life.</p>
-        <a href="https://store.steampowered.com/app/1172620/Sea_of_Thieves_2023_Edition/">Play Now</a>
+        <a href="https://rawg.io/games/sea-of-thieves">Play Now</a>
       </div>
       <div class="game-box spiderman">
         <img src="advt-images/spiderthumb.jpg" alt="Marvel’s Spider-Man Remastered">
         <h3>Marvel’s Spider-Man Remastered</h3>
         <p>Marvel’s Spider-Man Remastered delivers a visually stunning and improved version of the beloved action-adventure game. Swing through New York City as Spider-Man and experience upgraded graphics and features.</p>
-        <a href="https://store.steampowered.com/app/1817070/Marvels_SpiderMan_Remastered/">Play Now</a>
+        <a href="https://rawg.io/games/marvels-spider-man-remastered">Play Now</a>
       </div>
       <div class="game-box starwar">
         <img src="advt-images/starwarthumb.jpg" alt="STAR WARS Jedi: Survivor">
         <h3>STAR WARS Jedi: Survivor</h3>
         <p>Master the Force and survive in the STAR WARS universe. Become a legendary Jedi facing dark enemies and epic challenges.</p>
-        <a href="https://store.steampowered.com/app/1774580/STAR_WARS_Jedi_Survivor/">Play Now</a>
+        <a href="https://rawg.io/games/star-wars-jedi-survivor">Play Now</a>
       </div>
       <div class="game-box reddead">
         <img src="advt-images/redthumb.jpg" alt="Red Dead Redemption 2">
         <h3>Red Dead Redemption 2</h3>
         <p>An action-adventure game by Rockstar Games, Red Dead Redemption 2 is set in the Wild West and follows outlaw Arthur Morgan in the Van der Linde gang.</p>
-        <a href="https://store.steampowered.com/app/1174180/Red_Dead_Redemption_2/">Play Now</a>
+        <a href="https://rawg.io/games/red-dead-redemption-2">Play Now</a>
       </div>
     </div>
   </section>
