--- a/casual.html
+++ b/casual.html
@@ -42,25 +42,25 @@
         <img src="casual-images/amongthumb.jpg" alt="Among Us">
         <h3>Among Us</h3>
         <p>Play Among Us, the multiplayer game of teamwork and deception! Uncover impostors or deceive your way to victory in this thrilling space adventure.</p>
-        <a href="https://store.steampowered.com/app/945360/Among_Us/">Play Now</a>
+        <a href="https://rawg.io/games/among-us">Play Now</a>
       </div>
       <div class="game-box fort">
         <img src="casual-images/fortthumb.jpg" alt="Fortnite">
         <h3>Fortnite</h3>
         <p>Experience the excitement of Fortnite, a dynamic battle royale game blending fast-paced action and creative building. Join the global community, engage in epic battles, and be the last one standing!</p>
-        <a href="https://store.epicgames.com/en-US/p/fortnite">Play Now</a>
+        <a href="https://rawg.io/games/fortnite-3">Play Now</a>
       </div>
       <div class="game-box over">
         <img src="casual-images/overthumb.png" alt="Overcooked! 2">
         <h3>Overcooked! 2</h3>
         <p>Dive into cooperative culinary chaos in Overcooked! 2. Team up, navigate crazy kitchens, and serve up dishes against the clock. Grab your apron and play now for a hilarious culinary adventure!</p>
-        <a href="https://store.steampowered.com/app/728880/Overcooked_2/">Play Now</a>
+        <a href="https://rawg.io/games/overcooked-2">Play Now</a>
       </div>
       <div class="game-box mine">
         <img src="casual-images/minethumb.png" alt="Minecraft">
         <h3>Minecraft</h3>
         <p>Dive into the creative world of Minecraft, where you explore, mine resources, and build to your heart's content. The blocky, procedurally generated universe offers limitless possibilities for imaginative players.</p>
-        <a href="https://www.minecraft.net/en-us/download">Play Now</a>
+        <a href="https://rawg.io/games/minecraft">Play Now</a>
       </div>
     </div>
   </section>
@@ -70,25 +70,25 @@
         <img src="casual-images/terrthumb.png" alt="Terraria">
         <h3>Terraria</h3>
         <p>A 2D sandbox adventure game where you dig, build, and face challenges in a pixelated world. Unleash your creativity as you explore diverse environments and conquer various foes.</p>
-        <a href="https://store.steampowered.com/app/105600/Terraria/">Play Now</a>
+        <a href="https://rawg.io/games/terraria">Play Now</a>
       </div>
       <div class="game-box fall">
         <img src="casual-images/fallthumb.png" alt="Fall Guys">
         <h3>Fall Guys</h3>
         <p>Delightful battle royale party game filled with whimsical characters and chaotic challenges. Race, navigate obstacles, and survive elimination rounds for a fun and hilarious multiplayer experience.</p>
-        <a href="https://www.fallguys.com/en-US/download">Play Now</a>
+        <a href="https://rawg.io/games/fall-guys-2">Play Now</a>
       </div>
       <div class="game-box under">
         <img src="casual-images/underthumb.png" alt="Undertale">
         <h3>Undertale</h3>
         <p>An indie RPG with a unique combat system and narrative. Make impactful choices as you navigate through a world of monsters, offering a fresh and engaging take on traditional RPGs.</p>
-        <a href="https://store.steampowered.com/app/391540/Undertale/">Play Now</a>
+        <a href="https://rawg.io/games/undertale">Play Now</a>
       </div>
       <div class="game-box unpack">
         <img src="casual-images/unpackthumb.png" alt="Unpacking">
         <h3>Unpacking</h3>
         <p>Unpacking is a meditative puzzle game where arranging items reveals a life's journey. Enjoy a soothing and contemplative gaming experience as you unpack memories in different environments.</p>
-        <a href="https://store.steampowered.com/app/1135690/Unpacking/">Play Now</a>
+        <a href="https://rawg.io/games/unpacking-2">Play Now</a>
       </div>
     </div>
   </section>
