--- a/horror.html
+++ b/horror.html
@@ -42,26 +42,26 @@
         <img src="horror-images/amthumb.jpg" alt="Amnesia: Rebirth">
         <h3>Amnesia: Rebirth</h3>
         <p>Explore psychological horror in Amnesia: Rebirth. Solve puzzles, confront the unknown, and unveil a gripping narrative as you navigate through a haunting world.</p>
-        <a href="https://store.steampowered.com/app/999220/Amnesia_Rebirth/">Play Now</a>
+        <a href="https://rawg.io/games/amnesia-rebirth">Play Now</a>
       </div>
       <div class="game-box dead">
         <img src="horror-images/dbdthumb.jpg" alt="Dead by Daylight">
         <h3>Dead by Daylight</h3>
         <p>Experience multiplayer horror in Dead by Daylight. Survive as a hunted survivor or play as the relentless killer. Quick thinking and strategy are essential for survival in this intense and atmospheric game.</p>
-        <a href="https://store.steampowered.com/app/381210/Dead_by_Daylight/">Play Now</a>
+        <a href="https://rawg.io/games/dead-by-daylight">Play Now</a>
       </div>
       <div class="game-box over">
         <img src="horror-images/rethumb.jpg" alt="Resident Evil Village">
         <h3>Resident Evil Village</h3>
         <p>Enter the chilling world of Resident Evil Village. Confront grotesque horrors, solve puzzles, and unravel a dark narrative as you face terrifying enemies in this survival horror masterpiece.</p>
-        <a href="https://store.steampowered.com/agecheck/app/1196590/">Play Now</a>
+        <a href="https://rawg.io/games/resident-evil-village">Play Now</a>
        
       </div>
       <div class="game-box rem">
         <img src="horror-images/remthumb.png" alt="Remnant II">
         <h3>Remnant II</h3>
         <p>Immerse yourself in the chilling world of Remnant II, where horror and mystery intertwine. Face supernatural forces, solve enigmatic puzzles, and unravel a gripping narrative in this atmospheric horror experience.</p>
-        <a href="https://store.steampowered.com/app/1282100/Remnant_II/">Play Now</a>
+        <a href="https://rawg.io/games/remnant-ii">Play Now</a>
 
       </div>
     </div>
@@ -74,26 +74,26 @@
         <img src="horror-images/forthumb.png" alt="The Forest">
         <h3>The Forest</h3>
         <p>Survive in a mysterious forest after a plane crash. Build shelters, explore, and face terrifying creatures in this atmospheric survival horror game.</p>
-        <a href="https://store.steampowered.com/app/242760/The_Forest/">Play Now</a>
+        <a href="https://rawg.io/games/the-forest">Play Now</a>
       </div>
       <div class="game-box leth">
         <img src="horror-images/leththumb.png" alt="Lethal Company">
         <h3>Lethal Company</h3>
         <p>Enter the world of Lethal Company, a thrilling horror game where you face relentless enemies and unravel a dark narrative. Navigate challenging scenarios and confront the horrors within.</p>
-        <a href="https://store.steampowered.com/app/1966720/Lethal_Company/">Play Now</a>
+        <a href="https://rawg.io/games/lethal-company">Play Now</a>
 
       </div>
       <div class="game-box dark">
         <img src="horror-images/darkthumb.png" alt="DARK SOULS III">
         <h3>DARK SOULS III</h3>
         <p>Immerse yourself in the challenging and dark fantasy world of DARK SOULS III. Battle formidable foes, uncover secrets, and experience epic, unforgiving gameplay.</p>
-        <a href="https://store.steampowered.com/app/374320/DARK_SOULS_III/">Play Now</a>
+        <a href="https://rawg.io/games/dark-souls-iii">Play Now</a>
       </div>
       <div class="game-box dayz">
         <img src="horror-images/dayzthumb.png" alt="DayZ">
         <h3>DayZ</h3>
         <p>DayZ is a hardcore survival game set in a post-Soviet open-world. Encounter other players, scavenge for supplies, and navigate a dynamic environment filled with danger.</p>
-        <a href="https://store.steampowered.com/app/221100/DayZ/">Play Now</a>
+        <a href="https://rawg.io/games/dayz">Play Now</a>
 
       </div>
     </div>
