--- a/racing.html
+++ b/racing.html
@@ -42,25 +42,25 @@
         <img src="racing-images/ascthumb.jpg" alt="Assetto Corsa Competizione">
         <h3>Assetto Corsa Competizione</h3>
         <p>Experience GT racing in Assetto Corsa Competizione. Master realistic physics, dynamic weather, and day-night cycles in the prestigious Blancpain GT Series.</p>
-        <a href="https://store.steampowered.com/app/805550/Assetto_Corsa_Competizione/">Play Now</a>
+        <a href="https://rawg.io/games/assetto-corsa-competizione">Play Now</a>
       </div>
       <div class="game-box forza">
         <img src="racing-images/forzathumb.jpg" alt="Forza Horizon 4">
         <h3>Forza Horizon 4</h3>
         <p>Explore an ever-changing UK landscape in Forza Horizon 4. Collect and race a diverse array of cars in a thrilling open-world festival of speed.</p>
-        <a href="https://store.steampowered.com/app/1293830/Forza_Horizon_4/">Play Now</a>
+        <a href="https://rawg.io/games/forza-horizon-4">Play Now</a>
       </div>
       <div class="game-box nfspeed">
         <img src="racing-images/nfsthumb.jpg" alt="Need for Speed: Heat">
         <h3>Need for Speed: Heat</h3>
         <p>Feel the intensity of street racing in Need for Speed: Heat. Customize cars, evade the law, and rise to the top in the dangerous nightlife of Palm City.</p>
-        <a href="https://store.steampowered.com/app/1222680/Need_for_Speed_Heat/">Play Now</a>
+        <a href="https://rawg.io/games/need-for-speed-heat">Play Now</a>
       </div>
       <div class="game-box dirtrally">
         <img src="racing-images/dirt rally.jpg" alt="Dirt Rally 2.0">
         <h3>Dirt Rally 2.0</h3>
         <p>Get ready for an intense off-road racing experience. Dirt Rally 2.0 offers realistic handling, a variety of rally cars, and challenging tracks that will test your driving skills.</p>
-        <a href="https://store.steampowered.com/app/690790/DiRT_Rally_20/">Play Now</a>
+        <a href="https://rawg.io/games/dirt-rally-20">Play Now</a>
       </div>
     </div>
     
@@ -72,25 +72,25 @@
         <img src="racing-images/gta.jpg" alt="Grand Theft Auto V (GTA V)">
         <h3>Grand Theft Auto V (GTA V)</h3>
         <p>Explore the dynamic world of Los Santos in this action-packed open-world adventure. Engage in heists, high-speed chases, and a variety of activities in this must-play game for fans of immersive gameplay.</p>
-        <a href="https://store.steampowered.com/app/271590/Grand_Theft_Auto_V/">Play Now</a>
+        <a href="https://rawg.io/games/grand-theft-auto-v">Play Now</a>
       </div>
       <div class="game-box beamNG">
         <img src="racing-images/beamng.jpg" alt="BeamNG.drive">
         <h3>BeamNG.drive</h3>
         <p>Experience unparalleled vehicle physics and destruction in BeamNG.drive. Test the limits of realism as you crash, smash, and customize vehicles in this dynamic driving simulation.</p>
-        <a href="https://store.steampowered.com/app/284160/BeamNGdrive/">Play Now</a>
+        <a href="https://rawg.io/games/beamngdrive">Play Now</a>
       </div>
       <div class="game-box riders">
         <img src="racing-images/riders republic.jpg" alt="Riders Republic">
         <h3>Riders Republic</h3>
         <p>Join the extreme sports community in Riders Republic. Soar through the air, race down mountains, and compete in a massive multiplayer playground. Immerse yourself in thrilling adventures with a variety of extreme sports at your fingertips.</p>
-        <a href="https://store.steampowered.com/app/2290180/Riders_Republic/">Play Now</a>
+        <a href="https://rawg.io/games/riders-republic">Play Now</a>
       </div>
       <div class="game-box Snowrunner">
         <img src="racing-images/snow runner.jpg" alt="SnowRunner">
         <h3>SnowRunner</h3>
         <p>Conquer the most challenging terrains in SnowRunner. As an off-road truck simulator, navigate through treacherous landscapes, complete missions, and overcome natural obstacles. Test your driving skills in extreme conditions and deliver cargo to remote locations.</p>
-        <a href="https://store.steampowered.com/app/1465360/SnowRunner/">Play Now</a>
+        <a href="https://rawg.io/games/snowrunner">Play Now</a>
       </div>
     </div>
   </section>
