--- a/rpg.html
+++ b/rpg.html
@@ -42,25 +42,25 @@
         <img src="rpg-images/divthumb.jpg" alt="Divinity: Original Sin 2">
         <h3>Divinity: Original Sin 2</h3>
         <p>Dive into the captivating world of Divinity: Original Sin 2, a strategic RPG with deep storytelling and cooperative multiplayer adventures.</p>
-        <a href="https://store.steampowered.com/app/435150/Divinity_Original_Sin_2__Definitive_Edition/">Play Now</a>
+        <a href="https://rawg.io/games/divinity-original-sin-2">Play Now</a>
       </div>
       <div class="game-box elder">
         <img src="rpg-images/elderthumb.jpg" alt="Elder Scrolls V: Skyrim">
         <h3>Elder Scrolls V: Skyrim</h3>
         <p>Embark on an epic journey in Skyrim, exploring a vast fantasy world filled with quests, mythical creatures, and rich lore.</p>
-        <a href="https://store.steampowered.com/app/489830/The_Elder_Scrolls_V_Skyrim_Special_Edition/">Play Now</a>
+        <a href="https://rawg.io/games/the-elder-scrolls-v-skyrim">Play Now</a>
       </div>
       <div class="game-box path">
         <img src="rpg-images/poethumb.jpg" alt="Path of Exile">
         <h3>Path of Exile</h3>
         <p>Enter the dark and challenging world of Path of Exile, where deep character customization meets online multiplayer action.</p>
-        <a href="https://store.steampowered.com/app/238960/Path_of_Exile/">Play Now</a>
+        <a href="https://rawg.io/games/path-of-exile">Play Now</a>
       </div>
       <div class="game-box LordsoftheFallen">
         <img src="rpg-images/thumb-636797.jpg" alt="Lords of the Fallen">
         <h3>Lords of the Fallen</h3>
         <p>Dive into the dark fantasy of Lords of the Fallen, an action RPG where you play as Harkyn, a convicted criminal on a mission to stop otherworldly forces. With intense combat, skill progression, and moral choices, navigate a fortress filled with monstrous enemies, shaping both your character and the world's fate. Prepare for a gripping journey where every decision matters.</p>
-        <a href="https://store.steampowered.com/app/1501750/Lords_of_the_Fallen/">Play Now</a>
+        <a href="https://rawg.io/games/lords-of-the-fallen-2">Play Now</a>
       </div>
     </div>
   
@@ -73,25 +73,25 @@
         <img src="rpg-images/the witcher.jpg" alt="The Witcher 3">
         <h3>The Witcher 3: Wild Hunt</h3>
         <p>Embark on an epic open-world adventure as Geralt of Rivia, a monster hunter for hire. Navigate a morally ambiguous fantasy world, make impactful choices, and face powerful enemies.</p>
-        <a href="https://store.steampowered.com/app/292030/The_Witcher_3_Wild_Hunt/">Play Now</a>
+        <a href="https://rawg.io/games/the-witcher-3-wild-hunt">Play Now</a>
       </div>
       <div class="game-box finalfantasy">
         <img src="rpg-images/ffxiv-online-thumbnail.jpg" alt="Final Fantasy XIV">
         <h3>Final Fantasy XIV</h3>
         <p>Join Prince Noctis and his friends on a journey to reclaim his kingdom. This action-packed RPG features a captivating story, stunning visuals, and real-time combat.</p>
-        <a href="https://store.steampowered.com/app/39210/FINAL_FANTASY_XIV_Online/">Play Now</a>
+        <a href="https://rawg.io/games/final-fantasy-ix">Play Now</a>
       </div>
       <div class="game-box masseffect">
         <img src="rpg-images/mass effect 2.jpg" alt="Mass Effect 2">
         <h3>Mass Effect 2</h3>
         <p>Join Commander Shepard on a mission to save the galaxy from an impending threat. This space-faring RPG features a gripping storyline, impactful decision-making, and intense third-person shooter combat.</p>
-        <a href="https://store.steampowered.com/app/2362420/Mass_Effect_2_2010_Edition/">Play Now</a>
+        <a href="https://rawg.io/games/mass-effect-2">Play Now</a>
       </div>
       <div class="game-box Persona5">
         <img src="rpg-images/persona-5-strikers-thumbnail.jpg" alt="Persona 5">
         <h3>Persona 5</h3>
         <p>Experience the life of a high school student in Tokyo who moonlights as a Phantom Thief to change the hearts of corrupt individuals. Persona 5 combines social simulation with turn-based combat in a stylish and engaging way.</p>
-        <a href="https://store.steampowered.com/app/1687950/Persona_5_Royal/">Play Now</a>
+        <a href="https://rawg.io/games/persona-5">Play Now</a>
       </div>
     </div>
   </section>
