--- a/simulation.html
+++ b/simulation.html
@@ -42,25 +42,25 @@
         <img src="simulation-images/citskythumb.jpg" alt="Cities: Skylines">
         <h3>Cities: Skylines</h3>
         <p>Manage and build your own city in this city-building simulation game. Control everything from infrastructure to zoning.</p>
-        <a href="https://store.steampowered.com/app/255710/Cities_Skylines/">Play Now</a>
+        <a href="https://rawg.io/games/cities-skylines">Play Now</a>
       </div>
       <div class="game-box stardew">
         <img src="simulation-images/stardewthumb.jpg" alt="Stardew Valley">
         <h3>Stardew Valley</h3>
         <p>Transform a run-down farm into a thriving homestead in this relaxing farming simulation. Engage in activities like fishing, mining, and building relationships.</p>
-        <a href="https://store.steampowered.com/app/413150/Stardew_Valley/">Play Now</a>
+        <a href="https://rawg.io/games/stardew-valley">Play Now</a>
       </div>
       <div class="game-box thesims">
         <img src="simulation-images/simsthumb.jpg" alt="The Sims 4">
         <h3>The Sims 4</h3>
         <p>Create and guide virtual people through life in this popular life simulation game. Design homes, build relationships, and navigate the challenges of daily life.</p>
-        <a href="https://store.steampowered.com/app/1222670/The_Sims_4/">Play Now</a>
+        <a href="https://rawg.io/games/the-sims-4">Play Now</a>
       </div>
       <div class="game-box Eurotruck">
         <img src="simulation-images/euro truck.jpg" alt="Euro Truck Simulator 2">
         <h3>Euro Truck Simulator 2</h3>
         <p>Become a truck driver, transporting cargo across Europe, managing your business, and exploring realistic landscapes.</p>
-        <a href="https://store.steampowered.com/app/227300/Euro_Truck_Simulator_2/">Play Now</a>
+        <a href="https://rawg.io/games/euro-truck-simulator-2">Play Now</a>
       </div>
     </div>
   </section>
@@ -71,25 +71,25 @@
         <img src="simulation-images/eathumb.jpg" alt="EA SPORTS FC 24">
         <h3>EA SPORTS FC 24</h3>
         <p>Kick off in style with EA SPORTS FC 24! Dive into the heart-pounding world of virtual football. Build and manage your dream team, make strategic moves, and experience the thrill of victory on the digital pitch.</p>
-        <a href="https://store.steampowered.com/app/2195250/EA_SPORTS_FC_24/">Play Now</a>
+        <a href="https://rawg.io/games/ea-sports-fc-24">Play Now</a>
       </div>
       <div class="game-box rim">
         <img src="simulation-images/rimthumb.jpg" alt="RimWorld">
         <h3>RimWorld</h3>
         <p>Survive and thrive on an alien planet in RimWorld! Manage colonists, build a thriving colony, and shape unique, unpredictable stories of survival.</p>
-        <a href="https://store.steampowered.com/app/294100/RimWorld/">Play Now</a>
+        <a href="https://rawg.io/games/rimworld">Play Now</a>
       </div>
       <div class="game-box war">
         <img src="simulation-images/warthumb.jpg" alt="War Thunder">
         <h3>War Thunder</h3>
         <p>Command air, land, and sea forces in War Thunder! Experience realistic multiplayer battles, pilot aircraft, command tanks, and control naval vessels.</p>
-        <a href="https://store.steampowered.com/app/236390/War_Thunder/">Play Now</a>
+        <a href="https://rawg.io/games/war-thunder">Play Now</a>
       </div>
       <div class="game-box anno">
         <img src="simulation-images/annothumb.jpg" alt="Anno 1800">
         <h3>Anno 1800</h3>
         <p>Build, trade, and rule in Anno 1800! Manage resources, craft trade routes, and immerse yourself in this city-building and economic simulation set in the 19th century.</p>
-        <a href="https://store.steampowered.com/app/916440/Anno_1800/">Play Now</a>
+        <a href="https://rawg.io/games/anno-1800">Play Now</a>
       </div>
     </div>
   </section>
