--- a/strategy.html
+++ b/strategy.html
@@ -43,7 +43,7 @@
         <h3>Age of Empires IV</h3>
         <p>Command historical civilizations, build mighty empires, and wage epic battles in Age of Empires IV, the
           latest installment in the iconic real-time strategy series.</p>
-        <a href="https://store.steampowered.com/app/1959430/Age_of_Empires_IV__The_Sultans_Ascend/">Play Now</a>
+        <a href="https://rawg.io/games/age-of-empires-iv">Play Now</a>
       </div>
       <div class="game-box starii">
         <img src="strategy-images/starcraftthumb.jpg" alt="Starcraft II">
@@ -58,14 +58,14 @@
         <p>Expand your empire beyond Earth in Stellaris, a grand strategy game set in space. Explore galaxies, establish
           colonies, and navigate diplomatic and military challenges as you shape the destiny of your interstellar
           civilization.</p>
-        <a href="https://store.steampowered.com/app/281990/Stellaris">Play Now</a>
+        <a href="https://rawg.io/games/stellaris">Play Now</a>
       </div>
       <div class="game-box dota">
         <img src="strategy-images/dotathumb.jpg" alt="Dota 2">
         <h3>Dota 2</h3>
         <p>Dive into strategic battles in Dota 2! Select powerful heroes, team up with friends, and engage in intense
           multiplayer clashes. Join the global gaming community and prove your skills in this competitive MOBA.</p>
-        <a href="https://store.steampowered.com/app/570/Dota_2/">Play Now</a>
+        <a href="https://rawg.io/games/dota-2">Play Now</a>
       </div>
     </div>
   </section>
@@ -78,7 +78,7 @@
         <p>Unleash your inner leader in Sid Meier’s Civilization VI! This turn-based strategy game invites you to build
           and lead a civilization from ancient times to the modern era. Explore, expand, exploit, and exterminate in a
           quest for global dominance.</p>
-        <a href="https://store.steampowered.com/app/289070/Sid_Meiers_Civilization_VI/">Play Now</a>
+        <a href="https://rawg.io/games/civilization-vi">Play Now</a>
       </div>
       <div class="game-box heart">
         <img src="strategy-images/heartthumb.jpg" alt="Hearts of Iron IV">
@@ -86,7 +86,7 @@
         <p>Rewrite history in Hearts of Iron IV! This grand strategy game lets you guide a nation through the challenges
           of World War II. Lead armies, manage politics, and shape the outcome of one of the most significant conflicts
           in human history.</p>
-        <a href="https://store.steampowered.com/app/394360/Hearts_of_Iron_IV/">Play Now</a>
+        <a href="https://rawg.io/games/hearts-of-iron-iv">Play Now</a>
       </div>
       <div class="game-box counter">
         <img src="strategy-images/counterthumb.jpg" alt="Counter-Strike 2">
@@ -94,7 +94,7 @@
         <p>Gear up for intense tactical combat in Counter-Strike 2! This classic first-person shooter pits terrorists
           against counter-terrorists in a battle of skill and strategy. Team up with friends, master weapons, and
           compete in thrilling, high-stakes matches.</p>
-        <a href="https://store.steampowered.com/app/730/CounterStrike_2/">Play Now</a>
+        <a href="https://rawg.io/games/counter-strike-2-2">Play Now</a>
       </div>
       <div class="game-box hell">
         <img src="strategy-images/hellthumb.jpg" alt="Hell Let Loose">
@@ -102,7 +102,7 @@
         <p>Immerse yourself in the chaos of war in Hell Let Loose! This realistic World War II first-person shooter
           brings epic battles to life. Coordinate with your squad, capture strategic points, and experience the
           intensity of large-scale warfare.</p>
-        <a href="https://store.steampowered.com/app/686810/Hell_Let_Loose/">Play Now</a>
+        <a href="https://rawg.io/games/hell-let-loose">Play Now</a>
       </div>
     </div>
   </section>
